@@ -70,7 +70,7 @@ use vars qw(%c);
                     SWISH-3.0.pod
                     SWISH-LIBRARY.pod
                     ../perl/API.pm
-                    ../example/swish.cgi
+                    ../example/swish.cgi.in
                     ../prog-bin/spider.pl
                     ../filters/SWISH/Filter.pm
 
