@@ -13,14 +13,21 @@ perlmodule_SCRIPTS = \
     modules/SWISH/TemplateToolkit.pm \
     modules/SWISH/ParseQuery.pm
 
-
+CLEANFILES = swish.cgi
+swish.cgi: swish.cgi.in
+	@rm -f swish.cgi
+	@sed \
+		-e 's,@@perlmoduledir@@,$(libexecdir)/perl,' \
+		-e 's,@@swishbindir@@,$(bindir),' \
+		-e 's,@@perlbinary@@,$(PERL),' \
+			 $(srcdir)/swish.cgi.in > swish.cgi
 
 
 EXTRA_DIST = \
     README \
     SWISH-Stemmer-0.05.tar.gz \
     search.tt \
-    swish.cgi \
+    swish.cgi.in \
     swish.gif \
     swish.tmpl \
     $(perlmodule_SCRIPTS)
